--- a/app/scss/_typography.scss
+++ b/app/scss/_typography.scss
@@ -4,138 +4,172 @@ html {
   font-size: 10px;
 }
 
+h1 {
+  font-size: 5rem;
+}
+
+h2 {
+  font-size: 3.5rem;
+}
+
+h3 {
+  font-size: 2.9rem;
+}
+
+h4 {
+  font-size: 2.5rem;
+}
+
+p {
+  font-size: 2rem;
+  line-height: 1.5;
+}
+
+li {
+  font-size: 2.1rem;
+}
+
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 100;
   src: url("../font/Inter-Thin-BETA.woff2") format("woff2"),
-       url("../font/Inter-Thin-BETA.woff") format("woff");
+    url("../font/Inter-Thin-BETA.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 100;
   src: url("../font/Inter-ThinItalic-BETA.woff2") format("woff2"),
-       url("../font/Inter-ThinItalic-BETA.woff") format("woff");
+    url("../font/Inter-ThinItalic-BETA.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 200;
   src: url("../font/Inter-ExtraLight-BETA.woff2") format("woff2"),
-       url("../font/Inter-ExtraLight-BETA.woff") format("woff");
+    url("../font/Inter-ExtraLight-BETA.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 200;
   src: url("../font/Inter-ExtraLightItalic-BETA.woff2") format("woff2"),
-       url("../font/Inter-ExtraLightItalic-BETA.woff") format("woff");
+    url("../font/Inter-ExtraLightItalic-BETA.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 300;
   src: url("../font/Inter-Light-BETA.woff2") format("woff2"),
-       url("../font/Inter-Light-BETA.woff") format("woff");
+    url("../font/Inter-Light-BETA.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 300;
   src: url("../font/Inter-LightItalic-BETA.woff2") format("woff2"),
-       url("../font/Inter-LightItalic-BETA.woff") format("woff");
+    url("../font/Inter-LightItalic-BETA.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 400;
   src: url("../font/Inter-Regular.woff2") format("woff2"),
-       url("../font/Inter-Regular.woff") format("woff");
+    url("../font/Inter-Regular.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 400;
   src: url("../font/Inter-Italic.woff2") format("woff2"),
-       url("../font/Inter-Italic.woff") format("woff");
+    url("../font/Inter-Italic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 500;
   src: url("../font/Inter-Medium.woff2") format("woff2"),
-       url("../font/Inter-Medium.woff") format("woff");
+    url("../font/Inter-Medium.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 500;
   src: url("../font/Inter-MediumItalic.woff2") format("woff2"),
-       url("../font/Inter-MediumItalic.woff") format("woff");
+    url("../font/Inter-MediumItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 600;
   src: url("../font/Inter-SemiBold.woff2") format("woff2"),
-       url("../font/Inter-SemiBold.woff") format("woff");
+    url("../font/Inter-SemiBold.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 600;
   src: url("../font/Inter-SemiBoldItalic.woff2") format("woff2"),
-       url("../font/Inter-SemiBoldItalic.woff") format("woff");
+    url("../font/Inter-SemiBoldItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 700;
   src: url("../font/Inter-Bold.woff2") format("woff2"),
-       url("../font/Inter-Bold.woff") format("woff");
+    url("../font/Inter-Bold.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: italic;
   font-weight: 700;
   src: url("../font/Inter-BoldItalic.woff2") format("woff2"),
-       url("../font/Inter-BoldItalic.woff") format("woff");
+    url("../font/Inter-BoldItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
+  font-style: normal;
   font-weight: 800;
   src: url("../font/Inter-ExtraBold.woff2") format("woff2"),
-       url("../font/Inter-ExtraBold.woff") format("woff");
-}
-@font-face {
-  font-family: 'Inter';
-  font-style:  italic;
-  font-weight: 800;
-  src: url("../font/Inter-ExtraBoldItalic.woff2") format("woff2"),
-       url("../font/Inter-ExtraBoldItalic.woff") format("woff");
+    url("../font/Inter-ExtraBold.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Inter';
-  font-style:  normal;
-  font-weight: 900;
-  src: url("../font/Inter-Black.woff2") format("woff2"),
-       url("../font/Inter-Black.woff") format("woff");
+  font-style: italic;
+  font-weight: 800;
+  src: url("../font/Inter-ExtraBoldItalic.woff2") format("woff2"),
+    url("../font/Inter-ExtraBoldItalic.woff") format("woff");
 }
+
 @font-face {
   font-family: 'Inter';
-  font-style:  italic;
+  font-style: normal;
+  font-weight: 900;
+  src: url("../font/Inter-Black.woff2") format("woff2"),
+    url("../font/Inter-Black.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
   font-weight: 900;
   src: url("../font/Inter-BlackItalic.woff2") format("woff2"),
-       url("../font/Inter-BlackItalic.woff") format("woff");
+    url("../font/Inter-BlackItalic.woff") format("woff");
 }
