--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -3,32 +3,33 @@
 @import 'header';
 @import 'preview';
 @import 'about';
+@import 'stab';
 
-
-$link-color: #2937f0; 
 
 body {
-  background-color: #ffffff;
+	background-color: #ffffff;
 }
 
-
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
+}
+
+main {
+	padding-top: 7rem;
+	background-color: #ffffff;
 }
 
 .container {
-  max-width: 1160px;
-  margin: 0 auto;
-  padding: 0 2rem;
+	max-width: 1160px;
+	margin: 0 auto;
+	padding: 0 2rem;
 }
 
-
 @import 'media995';
-
