--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -77,11 +77,8 @@
 
 .case__image {
 	width: 50%;
+	height: 100%;
 	box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.24);
-
-	img {
-		width: 100%;
-	}
 }
 
 
