One more fix image in adaptive

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -913,6 +913,7 @@ a {
     margin-right: 0; }
   .case__image {
     width: 100%;
+    height: auto;
     margin-right: 0;
     margin-bottom: 3rem; }
   .case__links {
