--- a/app/scss/_media768.scss
+++ b/app/scss/_media768.scss
@@ -1,9 +1,14 @@
 @media screen and (max-width: 768px){
+	html {
+		font-size: 8px;
+	}
+
 	.another-cases__list {
 		display: flex;
 		flex-direction: column;
+
 		li {
-			margin-bottom: 20px;
+			margin-bottom: 2rem;
 			width: 100%;
 		}
 	}
