--- a/app/scss/_aside.scss
+++ b/app/scss/_aside.scss
@@ -2,6 +2,7 @@
 	width: 5rem;
 	position: fixed;
 	left: 0;
+	bottom: 0;
 	height: 100vh;
 	box-shadow: 0 0.5rem 2rem rgba(0, 0, 0, 0.1);
 	display: flex;
@@ -25,7 +26,7 @@
 .progress-bar__indicator {
 	position: absolute;
 	top: 0;
-	right: 0px;
+	right: 0;
 	width: 3px;
 	background: #333;
 }
@@ -60,24 +61,23 @@
 	display: flex;
 	align-items: center;
 	font-size: 1.5rem;
-	padding: 0 10px;
+	padding: 0 1rem;
 	z-index: -1;
 	transition: left 0.4s, box-shadow 0s;
-	box-shadow: 0rem 0rem 0rem 0rem rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .social__data-open {
 	left: 4rem;
 	transition: left 0.4s, box-shadow 2.5s;
-	box-shadow: 2rem 0rem 3rem 1rem rgba(0, 0, 0, 0.1);
-	font-size: 13px;
+	box-shadow: 2rem 0 3rem 1rem rgba(0, 0, 0, 0.1);
+	font-size: 1.3rem;
 }
 
 .btn-link, .btn-copy {
 	display: block;
 	background: #333;
 	border: none;
-	color: $accent-text-color;
 	padding: 0.5rem 1rem;
 	color: #fff;
 	border-radius: 92px;
@@ -89,7 +89,7 @@
 	border: 1px solid $primary-text-color;
 	color: $accent-text-color;
 	padding: 0.4rem 0.9rem;
-	margin: 0 5px;
+	margin: 0 0.5rem;
 	cursor: pointer;
 }
 
