--- a/app/scss/_media991.scss
+++ b/app/scss/_media991.scss
@@ -1,7 +1,15 @@
-@media screen and (max-width: 991px){
+@media screen and (max-width: 991px) {
+	html {
+		font-size: 9px;
+	}
+
 	.case {
 		flex-direction: column-reverse;
 		margin-bottom: 5rem;
+
+		p {
+			font-size: 1.5rem;
+		}
 	}
 
 	.case_reverse {
