Remove rem's from preview

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -38,7 +38,7 @@
   margin-right: 50px; }
 
 .title__nickname {
-  font-size: 6rem;
+  font-size: 60px;
   position: relative;
   overflow: hidden; }
 
@@ -48,7 +48,7 @@
 .nick-numbers {
   left: 163px;
   top: -400px;
-  height: 6rem;
+  height: 60px;
   text-align: center;
   position: absolute;
   display: block;
@@ -107,7 +107,7 @@
 
 @media screen and (max-width: 580px) {
   .title__nickname {
-    font-size: 3rem;
+    font-size: 30px;
     -webkit-transform: translateY(85px);
         -ms-transform: translateY(85px);
             transform: translateY(85px);
