--- a/app/scss/_preview.scss
+++ b/app/scss/_preview.scss
@@ -23,7 +23,7 @@
 }
 
 .title__nickname {
-	font-size: 6rem;
+	font-size: 60px;
 	position: relative;
 	overflow: hidden;
 }
@@ -35,7 +35,7 @@
 .nick-numbers {
 	left: 163px;
 	top: -400px;
-	height: 6rem;
+	height: 60px;
 	text-align: center;
 	position: absolute;
 	display: block;
@@ -100,7 +100,7 @@
 
 @media screen and (max-width: 580px) {
 	.title__nickname {
-		font-size: 3rem;
+		font-size: 30px;
 		transform: translateY(85px);
 		margin: 0;
 	}
