--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -2,8 +2,16 @@
 	margin-top: 10rem;
 
 	h1 {
-		margin-bottom: 6rem;
+		margin-bottom: 0;
 	}
+}
+
+.sub-small {
+	margin-top: 1rem;
+	margin-bottom: 6rem;
+	font-size: 1.5rem;
+	font-style: italic;
+	font-weight: 500;
 }
 
 .case {
