--- a/app/css/main.css
+++ b/app/css/main.css
@@ -802,9 +802,14 @@ em {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
-          justify-content: space-between; }
+          justify-content: space-between;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
   .another-cases__list li {
-    width: 33%; }
+    width: -webkit-calc((100%/3) - (20px/3));
+    width: calc((100%/3) - (20px/3));
+    margin-bottom: 10px; }
   .another-cases__list a {
     display: -webkit-box;
     display: -webkit-flex;
@@ -820,6 +825,7 @@ em {
             align-items: center;
     background-color: #575757;
     width: 100%;
+    height: 5rem;
     font-size: 1.4rem;
     font-weight: 600;
     color: #fff;
@@ -843,7 +849,8 @@ em {
           -ms-transform: translateY(-3px);
               transform: translateY(-3px);
       -webkit-box-shadow: 0px 5px 8px 0px rgba(51, 51, 51, 0.5);
-              box-shadow: 0px 5px 8px 0px rgba(51, 51, 51, 0.5); }
+              box-shadow: 0px 5px 8px 0px rgba(51, 51, 51, 0.5);
+      background-color: #333333; }
     .another-cases__list a:after {
       content: '';
       position: absolute;
