--- a/app/scss/_portfolio.scss
+++ b/app/scss/_portfolio.scss
@@ -109,10 +109,12 @@
 .another-cases__list {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 
 
 	li {
-		width: 33%;
+		width: calc((100%/3) - (20px/3));
+		margin-bottom: 10px;
 	}
 
 	a {
@@ -121,6 +123,7 @@
 		align-items: center;
 		background-color: $primary-text-color;
 		width: 100%;
+		height: 5rem;
 		font-size: 1.4rem;
 		font-weight: 600;
 		color: #fff;
@@ -140,6 +143,7 @@
 		&:hover {
 			transform: translateY(-3px);
 			box-shadow: 0px 5px 8px 0px rgba(51, 51, 51, 0.5);
+			background-color: $accent-text-color;
 		}
 
 		&:after {
