--- a/app/css/main.css
+++ b/app/css/main.css
@@ -127,7 +127,7 @@
   .preview .container {
     position: absolute; } }
 
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
 /**
@@ -147,6 +147,12 @@ html {
  */
 body {
   margin: 0; }
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block; }
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -205,17 +211,14 @@ abbr[title] {
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-b,
-strong {
+b, strong {
   font-weight: bolder; }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-code,
-kbd,
-samp {
+code, kbd, samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
@@ -231,8 +234,7 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-sub,
-sup {
+sub, sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -258,11 +260,7 @@ img {
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-button,
-input,
-optgroup,
-select,
-textarea {
+button, input, optgroup, select, textarea {
   font-family: inherit;
   /* 1 */
   font-size: 100%;
@@ -276,8 +274,7 @@ textarea {
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
-button,
-input {
+button, input {
   /* 1 */
   overflow: visible; }
 
@@ -285,37 +282,27 @@ input {
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
-button,
-select {
+button, select {
   /* 1 */
   text-transform: none; }
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+button, [type="button"], [type="reset"], [type="submit"] {
   -webkit-appearance: button; }
 
 /**
  * Remove the inner border and padding in Firefox.
  */
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0; }
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText; }
 
 /**
@@ -361,8 +348,7 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type="checkbox"],
-[type="radio"] {
+[type="checkbox"], [type="radio"] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   /* 1 */
@@ -372,8 +358,7 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
   height: auto; }
 
 /**
@@ -385,13 +370,12 @@ textarea {
   /* 1 */
   outline-offset: -2px;
   /* 2 */ }
+  [type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none; }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
-
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
@@ -421,15 +405,12 @@ summary {
 /**
  * Add the correct display in IE 10+.
  */
-template {
+template, [hidden] {
   display: none; }
 
 /**
  * Add the correct display in IE 10.
  */
-[hidden] {
-  display: none; }
-
 html {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
@@ -546,8 +527,7 @@ em {
   top: -webkit-calc(50% - 3.5rem / 2);
   top: calc(50% - 3.5rem / 2);
   left: -30rem;
-  -webkit-border-radius: 0 10px 10px 0;
-          border-radius: 0 10px 10px 0;
+  border-radius: 0 10px 10px 0;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -584,8 +564,7 @@ em {
   border: none;
   padding: 0.5rem 1rem;
   color: #fff;
-  -webkit-border-radius: 92px;
-          border-radius: 92px;
+  border-radius: 92px;
   font-size: 1.1rem; }
 
 .btn-copy {
@@ -601,8 +580,7 @@ em {
   height: 3rem;
   width: 3rem;
   background-position: center;
-  -webkit-background-size: 70% 70%;
-          background-size: 70%;
+  background-size: 70%;
   background-repeat: no-repeat; }
 
 .icon-vk {
@@ -748,8 +726,7 @@ em {
   background-color: #333333;
   color: #FFFFFF;
   padding: 10px 25px;
-  -webkit-border-radius: 92px;
-          border-radius: 92px;
+  border-radius: 92px;
   -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   -webkit-transition: 0.3s;
@@ -838,8 +815,7 @@ em {
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
-    -webkit-border-radius: 1px;
-            border-radius: 1px; }
+    border-radius: 1px; }
     .another-cases__list a span {
       text-transform: unset;
       font-size: 1.1rem;
@@ -859,7 +835,6 @@ em {
       width: 16px;
       top: -webkit-calc(50% - 8px);
       top: calc(50% - 8px);
-      -webkit-background-size: cover;
       background-size: cover;
       background-image: url("../img/icon-link.svg"); }
 
