--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,66 +1,80 @@
 .about {
-	line-height: 1.8;
+  padding-top: 2rem;
+  line-height: 1.8;
+  display: flex;
+  //justify-content: space-between;
 
-	a {
-		text-decoration: underline;
-		font-weight: 600;
-		color: $accent-text-color;
+  a {
+    text-decoration: underline;
+    font-weight: 600;
+    color: $accent-text-color;
 
-		&:hover {
-			text-decoration: none;
-		}
-	}
+    &:hover {
+      text-decoration: none;
+    }
+  }
 
 }
+
+.about-content {
+  margin-left: 2rem;
+
+  h2 {
+    margin-top: 1.7em;
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+}
+
+.about-aside {
+  display: flex;
+  flex-direction: column;
+  max-width: 29rem;
+}
+
+.photo {
+  height: 30rem;
+  float: left;
+}
+
 
 .span-custom {
-	position: relative;
-	color: #fff;
-	font-style: italic;
-	font-weight: 600;
-	z-index: 0;
-	display: inline-block;
+  position: relative;
+  color: #fff;
+  font-style: italic;
+  font-weight: 600;
+  z-index: 0;
+  display: inline-block;
 
-	&:after {
-		content: "";
-		z-index: -1;
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		transform: rotate(-1.5deg);
-		background-color: #333;
-	}
+  &:after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    transform: rotate(-1.5deg);
+    background-color: #333;
+  }
+
 }
 
-.soft-skill {
-	margin-top: 3rem;
-	margin-bottom: 3rem;
-
-	h2 {
-		font-weight: 600;
-		font-size: 1.8rem;
-	}
-}
-
-.soft-skill__list {
-	font-size: 1.3rem;
-	font-weight: 600;
-	display: flex;
-	flex-wrap: wrap;
+.photo-sub {
+  font-size: 1.5rem;
 }
 
 .soft-skill__item {
-	margin-right: 1rem;
-	margin-bottom: 0.8rem;
-	position: relative;
-	color: $accent-text-color;
-	padding: 0 1.5rem;
-	border: 2px solid $accent-text-color;
+  font-size: 1.3rem;
+  font-weight: 600;
+  position: relative;
+  color: $primary-text-color;
+  padding: 0 1.5rem;
+  border: 2px solid $primary-text-color;
 
-	&:last-child {
-		margin-right: 0;
-	}
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
