--- a/app/css/main.css
+++ b/app/css/main.css
@@ -599,7 +599,7 @@ em {
   background-image: url("../img/icon-github.svg"); }
 
 .about {
-  padding-top: 2rem;
+  padding-top: 5rem;
   line-height: 1.8;
   display: -webkit-box;
   display: -webkit-flex;
@@ -615,9 +615,12 @@ em {
 .about-content {
   margin-left: 2rem; }
   .about-content h2 {
-    margin-top: 1.7em; }
+    margin-top: 1.3em;
+    margin-bottom: 0.3em; }
     .about-content h2:first-child {
       margin-top: 0; }
+  .about-content p {
+    margin-top: 0; }
 
 .about-aside {
   display: -webkit-box;
@@ -633,7 +636,9 @@ em {
 
 .photo {
   height: 30rem;
-  float: left; }
+  float: left;
+  width: 30rem;
+  margin: 0 auto; }
 
 .span-custom {
   position: relative;
@@ -857,6 +862,10 @@ body {
   background: #575757;
   color: #fff; }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
 ul {
   margin: 0;
   padding: 0;
@@ -946,4 +955,13 @@ a {
   .another-cases {
     margin-bottom: 1rem; }
   .portfolio {
-    margin-top: 4rem; } }
+    margin-top: 4rem; }
+  .about {
+    display: block; }
+  .about-aside {
+    margin-bottom: 2rem;
+    float: left;
+    margin-right: 2rem;
+    max-width: unset; }
+  .about-content {
+    margin-left: 0; } }
