--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  padding-top: 2rem;
+  padding-top: 5rem;
   line-height: 1.8;
   display: flex;
   //justify-content: space-between;
@@ -20,10 +20,15 @@
   margin-left: 2rem;
 
   h2 {
-    margin-top: 1.7em;
+    margin-top: 1.3em;
+    margin-bottom: 0.3em;
     &:first-child {
       margin-top: 0;
     }
+  }
+
+  p {
+    margin-top: 0;
   }
 }
 
@@ -36,6 +41,8 @@
 .photo {
   height: 30rem;
   float: left;
+  width: 30rem;
+  margin: 0 auto;
 }
 
 
