--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -3,7 +3,6 @@
 @import 'colors';
 @import 'typography';
 @import 'aside';
-@import 'header';
 @import 'about';
 @import 'portfolio';
 
@@ -15,6 +14,10 @@ body {
 *::selection {
   background: $primary-text-color;
   color: #fff;
+}
+
+* {
+	box-sizing: border-box;
 }
 
 ul {
